# CRPropa2

./: AUTHORS  COPYRIGHT  ChangeLog  GetPDCrossSections.sh  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  get_externals.sh  sysdep.h
IRBzRedshiftEvol_Kneiske/: PlotFrom0202104_z_0.csv  PlotFrom0202104_z_0_2.csv  PlotFrom0202104_z_0_4.csv  PlotFrom0202104_z_0_6.csv  PlotFrom0202104_z_1.csv  PlotFrom0202104_z_2.csv  PlotFrom0202104_z_3.csv  PlotFrom0202104_z_4.csv  PlotFrom0309141_z_0.csv  PlotFrom0309141_z_0_2.csv  PlotFrom0309141_z_0_4.csv  PlotFrom0309141_z_0_6.csv  PlotFrom0309141_z_1.csv  PlotFrom0309141_z_2.csv  PlotFrom0309141_z_3.csv  PlotFrom0309141_z_4.csv
Plot/: crpropaoutput.cc  crpropaoutput.h  graphics.h  plot_deflections.cc  plot_skymap.pro  plot_spectrum.cc  rootlogon.C.example  utils.cc  utils.h
Plot/DATA/: combined_spectrum_icrc09.txt
dint/: Makefile.am  Makefile.in
dint/src/: advance.cpp  advance.h  advance.ph  background.cpp  background.h  background.ph  binfread.cpp  binfread.h  check.cpp  check.h  check.ph  const.ph  cvector.cpp  cvector.h  cvector.ph  decay.cpp  decay.ph  deriv.cpp  deriv.h  deriv.ph  error.cpp  error.ph  final.cpp  final.h  final.ph  fold.cpp  fold.h  fold.ph  frag.cpp  frag.ph  gauleg.ph  inject.cpp  inject.h  inject.ph  io_util.cpp  io_util.ph  load.cpp  load.h  load.ph  math_util.ph  (+18 more)
doc/: AllIRBzEvolutionModelsCan.eps  Doxyfile  Makefile.am  Makefile.in  PhotonDensityCollection2.eps  UserGuide.tex  crpdetector.eps  precision_traj.ps
examples/GettingStarted/: .traj3d.txt.kate-swp  BField_1D_100pG.txt  smallB.fits  source1d.txt  source1d.xml  source1d.xml~  source3d.xml  source3d.xml~  traj1d.xml  traj3d.txt  traj3d.xml
sibyll/: Makefile.am  Makefile.in  sibyll.h  sibyll_dgenerator.f  sibyll_dinterface.f
sophia/: Makefile.am  Makefile.in
sophia/src/: sophia.h  sophia_interface.f
src/: CRPropa.cc  CRPropa.h  Makefile.am  Makefile.in  units.h  vector3d.h
src/Algo/: algo_vec.h
src/Config/: Makefile.am  Makefile.in  asciioutput.cc  asciioutput.h  basicparam.cc  basicparam.h  defqueue.h  everything.cc  everything.h  fitsoutput.cc  fitsoutput.h  nooutput.h  outputdata.h  rootoutput.cc  rootoutput.h  typedclass.h  xmlextract.cc  xmlextract.h  xmlparam.h
src/Environment/: Makefile.am  Makefile.in  env1d.cc  env1d.h  galacticstructure.cc  galacticstructure.h  largescalestructure.cc  largescalestructure.h  universe.h
src/Exceptions/: crp_err.h  fits_err.h  xml_err.h
src/Gas/: Makefile.am  Makefile.in  clustergas.cc  clustergas.h  gas.h  gridgas.cc  gridgas.h  lssgas.cc  lssgas.h
src/Interactions/: Makefile.am  Makefile.in  TALYSMeanFreePath.cc  TALYSMeanFreePath.h  TALYSMeanFreePathAccurate.cc  TALYSMeanFreePathAccurate.h  TALYSMeanFreePathAvrgd.cc  TALYSMeanFreePathAvrgd.h  TALYSMeanFreePathTabulated.cc  TALYSMeanFreePathTabulated.h  TabulatedTALYSAveragedCrossSection.cc  TabulatedTALYSAveragedCrossSection.h  TabulatedTALYSCrossSections.cc  TabulatedTALYSCrossSections.h  TabulatedTALYSMeanFreePath.cc  TabulatedTALYSMeanFreePath.h  TabulatedTALYSMeanFreePath_CMB.cc  TabulatedTALYSMeanFreePath_CMB.h  TabulatedTALYSMeanFreePath_IRB.cc  TabulatedTALYSMeanFreePath_IRB.h  TabulatedTALYSY.cc  TabulatedTALYSY.h  basicpinteractions.cc  basicpinteractions.h  interactiondata.h  nullinteractions.h  photoninteractions.cc  photoninteractions.h  sophiainteractions.cc  sophiainteractions.h
src/Interactions/proton_f77/: difpp.out  pairprodrate_extended.txt  totpp.out  totppp.out
src/Interactions/proton_sophia/: pairprodrate_extended.txt  pairprodrate_extended_cmb.txt  pionprodrate_n.txt  pionprodrate_n_ir_z0.txt  pionprodrate_n_ir_z0.txt.old  pionprodrate_p.txt  pionprodrate_p_ir_z0.txt  pionprodrate_p_ir_z0.txt.old
src/MagField/: Makefile.am  Makefile.in  field1d.cc  field1d.h  gridfield.cc  gridfield.h  kolmogoroffmagfield.cc  kolmogoroffmagfield.h  lssfield.cc  lssfield.h  magfield.h  nullmagfield.h  uniformmagfield.h
src/Observers/: Makefile.am  Makefile.in  largesphereobservers.cc  largesphereobservers.h  noobserver.h  observers.h  pointobserver.cc  pointobserver.h  smallsphereobservers.cc  smallsphereobservers.h
src/Particles/: Makefile.am  Makefile.in  list1dphotons.cc  list1dphotons.h  neutrino.cc  neutrino.h  nucleus.cc  nucleus.h  nucleusdb.cc  nucleusdb.h  particle.cc  particle.h  particlepropa.cc  particlepropa.h  photon.cc  photon.h
src/PhotonBackground/: CMB.cc  CMB.h  CMBLikeScaling.cc  CMBLikeScaling.h  IR.cc  IR.h  IRBzEvolutionFactory.cc  IRBzEvolutionFactory.h  Kneiske2004_BestFit.cc  Kneiske2004_BestFit.h  Makefile.am  Makefile.in  NoIRBScaling.cc  NoIRBScaling.h  Opt.cc  Opt.h  PhotonBackground.cc  PhotonBackground.h  TIRBzEvolutionModel.cc  TIRBzEvolutionModel.h  UserDefinedScaling.cc  UserDefinedScaling.h  photonspectrum.cc  photonspectrum.h  uniforminfrared.cc  uniforminfrared.h  variableinfrared.cc  variableinfrared.h
src/Sources/: Makefile.am  Makefile.in  continuoussources.cc  continuoussources.h  discretesources.cc  discretesources.h  sourcedensity.cc  sourcedensity.h  sources.h
