
lib_LTLIBRARIES = libdint.la
libdint_la_SOURCES = \
  src/advance.cpp \
	src/advance.h \
	src/advance.ph \
	src/advance.pp \
	src/background.cpp \
	src/background.h \
	src/background.ph \
	src/background.pp \
	src/binfread.cpp \
	src/binfread.h \
	src/check.cpp \
	src/check.h \
	src/check.ph \
	src/check.pp \
	src/const.h \
	src/const.ph \
	src/const.pp \
	src/cvector.cpp \
	src/cvector.h \
	src/cvector.ph \
	src/cvector.pp \
	src/decay.cpp \
	src/decay.h \
	src/decay.ph \
	src/decay.pp \
	src/deriv.cpp \
	src/deriv.h \
	src/deriv.ph \
	src/deriv.pp \
	src/error.cpp \
	src/error.h \
	src/error.ph \
	src/error.pp \
	src/final.cpp \
	src/final.h \
	src/final.ph \
	src/final.pp \
	src/fold.cpp \
	src/fold.h \
	src/fold.ph \
	src/fold.pp \
	src/frag.cpp \
	src/frag.h \
	src/frag.ph \
	src/frag.pp \
	src/gauleg.cpp \
	src/gauleg.h \
	src/gauleg.ph \
	src/gauleg.pp \
	src/inject.cpp \
	src/inject.h \
	src/inject.ph \
	src/inject.pp \
	src/io_util.cpp \
	src/io_util.h \
	src/io_util.ph \
	src/io_util.pp \
	src/load.cpp \
	src/load.h \
	src/load.ph \
	src/load.pp \
	src/math_util.cpp \
	src/math_util.h \
	src/math_util.ph \
	src/math_util.pp \
	src/prepare.cpp \
	src/prepare.h \
	src/prepare.ph \
	src/prepare.pp \
	src/prop_second.cpp \
	src/prop_second.h \
	src/prop_second.ph \
	src/prop_second.pp \
	src/rate.cpp \
	src/rate.h \
	src/rate.ph \
	src/rate.pp \
	src/spectrum.cpp \
	src/spectrum.h \
	src/spectrum.ph \
	src/spectrum.pp \
	src/sync.cpp \
	src/sync.h \
	src/sync.ph \
	src/sync.pp \
	src/utilities.h \
	src/vector.cpp \
	src/vector.h \
	src/vector.ph \
	src/vector.pp 
