AM_CPPFLAGS = $(SUB_CPPFLAGS)

lib_LTLIBRARIES = libConfig.la

#if ROOTCOMPIL
#addrootsrc = rootoutput.cc rootoutput.h
#else
#addrootsrc = 
#endif

libConfig_la_SOURCES = rootoutput.cc rootoutput.h \
                 asciioutput.cc \
                 basicparam.cc  \
                 everything.cc  \
                 fitsoutput.cc  \
                 xmlextract.cc \
		 asciioutput.h defqueue.h    fitsoutput.h  outputdata.h  xmlextract.h \
		 basicparam.h  everything.h  nooutput.h    typedclass.h  xmlparam.h
