
AM_CPPFLAGS = $(SUB_CPPFLAGS)

lib_LTLIBRARIES = libEnvironment.la

libEnvironment_la_SOURCES = env1d.cc \
                            galacticstructure.cc \
                            largescalestructure.cc \
														env1d.h               largescalestructure.h \
														galacticstructure.h   universe.h

