
AM_CPPFLAGS = $(SUB_CPPFLAGS)

lib_LTLIBRARIES = libInteractions.la

libInteractions_la_SOURCES =    basicpinteractions.cc \
				sophiainteractions.cc \
				photoninteractions.cc \
				TabulatedTALYSY.cc\
				TabulatedTALYSMeanFreePath.cc\
				TabulatedTALYSMeanFreePath_CMB.cc\
				TabulatedTALYSMeanFreePath_IRB.cc\
				TabulatedTALYSCrossSections.cc \
				TabulatedTALYSAveragedCrossSection.cc\
				TALYSMeanFreePath.cc\
				TALYSMeanFreePathAvrgd.cc\
				TALYSMeanFreePathAccurate.cc\
				TALYSMeanFreePathTabulated.cc\
				basicpinteractions.h nullinteractions.h \
				TabulatedTALYSY.h\
                                TabulatedTALYSMeanFreePath.h\
				TabulatedTALYSMeanFreePath_CMB.h\
				TabulatedTALYSMeanFreePath_IRB.h\
				TALYSMeanFreePath.h\
				TALYSMeanFreePathAvrgd.h\
				TALYSMeanFreePathAccurate.h\
				TALYSMeanFreePathTabulated.h\
				TabulatedTALYSCrossSections.h \
				TabulatedTALYSAveragedCrossSection.h\
				interactiondata.h    sophiainteractions.h\
				photoninteractions.h TALYSMeanFreePath.h


