
AM_CPPFLAGS = $(SUB_CPPFLAGS)

lib_LTLIBRARIES = libMagField.la

libMagField_la_SOURCES = field1d.cc \
                         gridfield.cc \
                         kolmogoroffmagfield.cc \
                         lssfield.cc \
												 field1d.h             lssfield.h            uniformmagfield.h \
												 gridfield.h           magfield.h \
												 kolmogoroffmagfield.h nullmagfield.h
