
AM_CPPFLAGS = $(SUB_CPPFLAGS)

lib_LTLIBRARIES = libObservers.la

libObservers_la_SOURCES = largesphereobservers.cc \
                          pointobserver.cc \
                          smallsphereobservers.cc \
													largesphereobservers.h observers.h            smallsphereobservers.h \
													noobserver.h           pointobserver.h

