

AM_CPPFLAGS = $(SUB_CPPFLAGS)

lib_LTLIBRARIES = libParticles.la

libParticles_la_SOURCES = list1dphotons.cc \
                          neutrino.cc \
                          nucleus.cc \
				nucleusdb.cc \
                          particle.cc \
                          particlepropa.cc \
                          photon.cc \
			  nucleusdb.h \
			  list1dphotons.h \
		      	  particlepropa.h \
			  neutrino.h \
				particle.h \
				photon.h \
				nucleus.h 

