
AM_CPPFLAGS = $(SUB_CPPFLAGS)

lib_LTLIBRARIES = libPhotonBackground.la

libPhotonBackground_la_SOURCES = 	CMB.cc Opt.cc IR.cc uniforminfrared.cc variableinfrared.cc	\
					photonspectrum.cc	\
					CMBLikeScaling.cc	\
					TIRBzEvolutionModel.cc	\
					Kneiske2004_BestFit.cc	\
					UserDefinedScaling.cc	\
					NoIRBScaling.cc	\
					PhotonBackground.cc	\
					PhotonBackground.h	\
					IRBzEvolutionFactory.cc \
					CMB.h	\
					Opt.h	\
					IR.h	\
					uniforminfrared.h	\
					variableinfrared.h	\
					photonspectrum.h	\
					TIRBzEvolutionModel.h	\
					Kneiske2004_BestFit.h	\
					UserDefinedScaling.h	\
					CMBLikeScaling.h	\
					NoIRBScaling.h	\
					IRBzEvolutionFactory.h
